--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.3.2",
+    "pretendard": "^1.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.18"
