--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.1",
+    "@use-gesture/react": "^10.3.1",
     "next": "15.3.2",
     "pretendard": "^1.3.9",
     "react": "^19.0.0",
