--- a/ml/src/requirements.txt
+++ b/ml/src/requirements.txt
@@ -1,40 +1,96 @@
-# ✅ FastAPI 서버용
-fastapi==0.111.0
-uvicorn[standard]==0.29.0
+# ===========================================
+# Legal AI Project - Unified & Production-Ready Requirements
+# ===========================================
 
-# ✅ LangChain 모듈 - 최신 구조 반영
-langchain==0.1.16                   # core langchain
-langchain-openai==0.0.5             # OpenAI 연동 (ChatOpenAI, OpenAIEmbeddings)
-langchain-community==0.0.21         # ChatOpenAI, PromptTemplate 등 community 모듈
-langchain-core==0.1.48              # Prompt, OutputParser 등 core 기능
-langchain-chroma==0.1.1             # Chroma vectorstore 연동
+# 웹 프레임워크 (API 서버 구성 핵심 패키지)
+fastapi==0.115.9       # 민주님, 친구님 동일 (친구님은 >=로 관리)
+uvicorn==0.34.2        # 친구님이 더 최신버전 사용 → 친구 버전 채택 (민주님은 0.24.0)
 
-# ✅ ChromaDB - 벡터스토어
-chromadb==0.5.0
+starlette==0.45.3      # FastAPI 내부 의존성 (민주님만 명시 / 안정성 위해 포함)
+anyio==3.7.1           # 비동기 통신 지원
+sniffio==1.3.1         # 비동기 context 관리
 
-# ✅ OpenAI API 클라이언트
-openai==1.3.7
+# LangChain 생태계 (AI LLM 체인 구성)
+langchain==0.3.25             # 민주님, 친구님 동일
+langchain-core==0.3.64        # 민주님만 명시 → 포함
+langchain-community==0.3.24   # 민주님만 명시 → 포함
+langchain-anthropic==0.3.15   # 민주님, 친구님 동일
+langchain-openai==0.3.19      # 민주님, 친구님 동일
+langchain-chroma==0.2.4       # 민주님, 친구님 동일
+langchain-text-splitters==0.3.8  # 민주님만 명시 → 포함
 
-# ✅ 환경변수 관리 (.env)
-python-dotenv==1.0.1
+# 데이터 모델링 및 유효성 검증 (Pydantic v2 기반)
+pydantic==2.11.5        # 친구님 버전(2.11.5)이 미세하게 최신 → 친구님 버전 채택
+pydantic-core==2.33.2
+pydantic-settings==2.9.1
 
-# ✅ 데이터 처리
-tqdm
-pydantic==1.10.13                   # FastAPI에서 Pydantic v2 사용 시 오류 방지
+# AI LLM API 클라이언트 (OpenAI, Anthropic 등)
+anthropic==0.54.0
+openai==1.86.0
+tiktoken==0.9.0
+tokenizers==0.21.1       # 민주님만 포함 → 유지 (HuggingFace 등 모델 쓸 때 종종 필요)
 
-# ✅ 비동기 요청 등 유틸
-httpx==0.27.2
+# 벡터 데이터베이스 (RAG용 ChromaDB)
+chromadb==1.0.12
+chroma-hnswlib==0.7.3     # 민주님만 포함 → 유지 (HNSW 인덱스 사용 가능성 대비)
 
+# HTTP 클라이언트 및 비동기 통신
+httpx==0.28.1
+httpx-sse==0.4.0          # 민주님만 포함 → SSE 방식 채널 대비 유지
+requests==2.31.0
+aiohttp==3.12.7
+aiosignal==1.3.2
 
-# requirements.txt
-pandas
+# 환경변수 관리
+python-dotenv==1.1.0      # 친구님 버전이 조금 최신 → 친구님 버전 채택 (민주님 1.0.0)
 
-huggingface_hub
+# 로깅 및 안정성
+loguru==0.7.2
+tenacity==8.5.0           # 재시도 로직 (LangChain 내부에도 사용)
+backoff==2.2.1            # 재시도 로직 보조 (민주님만 포함 → 유지)
 
-jsonpath-ng
+# 암호화 및 보안처리
+cryptography==41.0.7      # 민주님 버전 채택 (친구님은 선택사항으로 빼두었음)
+bcrypt==4.3.0
 
-sentence_transformers
+# JSON 및 직렬화 최적화
+orjson==3.10.18
+jsonschema==4.24.0
 
-langchain_chroma
+# 날짜/시간 관련 처리
+python-dateutil==2.9.0.post0  # 친구님 버전 약간 최신 → 친구님 버전 채택 (민주님 2.8.2)
 
-langchain-anthropic
+# 파일 업로드 및 엑셀처리 (API 확장성 고려 추가)
+python-multipart==0.0.20   # 친구님에서 가져옴 (파일업로드 API 개발 대비)
+openpyxl==3.1.5            # 친구님에서 가져옴 (엑셀파일 활용 가능성 대비)
+
+# 템플릿 엔진 (FastAPI 내 HTML Rendering 가능성 대비)
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+
+# 유틸리티, 패키징
+PyYAML==6.0.2
+packaging==23.2
+typing_extensions==4.14.0  # 민주님이 조금 더 최신 (친구님은 4.13.2)
+
+# 운영환경용 (배포 서버용)
+gunicorn==23.0.0          # 친구님에서 추가 (운영서버용 → 필수로 유지 추천)
+
+# ===========================================
+# [참고] 개발도구(dev-requirements로 분리 권장 항목)
+# ===========================================
+
+# black>=25.1.0
+# flake8>=7.2.0
+# isort>=6.0.1
+# pytest>=8.4.0
+# pytest-asyncio>=1.0.0
+# watchfiles>=1.0.5
+
+# ===========================================
+# [선택적 패키지] - 현 시점에서 사용계획에 따라 추가 고려
+# numpy>=1.26.4
+# pandas>=2.2.3
+# psutil>=7.0.0
+# structlog>=25.4.0
+# ===========================================
