test: add CI/CD workflow and update requirements

--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -75,6 +75,11 @@ typing_extensions==4.14.0
 # 운영환경용 (배포 서버용)
 gunicorn==23.0.0
 
+# CI 툴들
+pytest
+flake8
+black
+isort
 # ===========================================
 # [참고] 개발도구(dev-requirements로 분리 권장 항목)
 # ===========================================
