--- a/.github/workflows/ci-cd-test.yml
+++ b/.github/workflows/ci-cd-test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ml/ml/requirements.txt
+          pip install -r ml/requirements.txt
           pip install pytest flake8 black isort
 
       - name: Lint with flake8
