Chore: allow format checks to warn instead of fail
CI에서 black, isort 코드 스타일 검사 실패 시 전체 워크플로우 실패가 아닌 경고로 처리하도록 수정

--- a/.github/workflows/ci-cd-test.yml
+++ b/.github/workflows/ci-cd-test.yml
@@ -51,9 +51,11 @@ jobs:
 
       - name: Check import sorting with isort
         run: isort --check-only --diff ml
+        continue-on-error: true
 
       - name: Check code formatting with black
         run: black --check --diff ml
+        continue-on-error: true
 
       - name: Run tests with pytest
         run: |
