--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,32 +2,32 @@
 # This file is temporarily preserved for backup and testing purposes.
 # Once verified, this file will be removed.
 
-# name: Deploy to EC2
+name: Deploy to EC2
 
-# on:
-#   push:
-#     branches:
-#       - develop
+on:
+  push:
+    branches:
+      - develop
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-#       - name: Set up SSH
-#         uses: webfactory/ssh-agent@v0.8.0
-#         with:
-#           ssh-private-key: ${{ secrets.ML_EC2_SSH_KEY }}
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.8.0
+        with:
+          ssh-private-key: ${{ secrets.ML_EC2_SSH_KEY }}
 
-#       - name: Deploy to EC2 and restart container
-#         run: |
-#           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
-#             cd ~/ml/ml
-#             git fetch origin refactor/path-handling
-#             git reset --hard origin/refactor/path-handling
-#             docker compose down
-#             docker compose up -d --build
-#           EOF
+      - name: Deploy to EC2 and restart container
+        run: |
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+            cd ~/ml/ml
+            git fetch origin refactor/path-handling
+            git reset --hard origin/refactor/path-handling
+            docker compose down
+            docker compose up -d --build
+          EOF
