add: compileall syntax check before deployment
배포 전에 문법 오류(TabError, IndentationError 등)를 사전에 탐지하기 위해
`python -m compileall` 명령어를 CI에 추가했습니다.

테스트 코드가 없어도 전체 Python 파일의 문법 오류를 사전 차단할 수 있어,
EC2에 배포 후 컨테이너가 크래시나는 문제를 방지할 수 있습니다.

스타일 검사(flake8, black, isort)는 기존처럼 continue-on-error 옵션을 유지하고,
문법 오류만 중단하도록 구성했습니다.

--- a/.github/workflows/ci-cd-test.yml
+++ b/.github/workflows/ci-cd-test.yml
@@ -54,6 +54,9 @@ jobs:
         run: black --check --diff ml
         continue-on-error: true
 
+      - name: Syntax check (compileall)
+        run: python -m compileall -q ml
+
       - name: Run tests
         run: pytest ml --verbose --tb=short
 
